--- a/blog/blog-api/blog-admin/pom.xml
+++ b/blog/blog-api/blog-admin/pom.xml
@@ -95,10 +95,10 @@
             <artifactId>joda-time</artifactId>
             <version>2.10.10</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
